--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <link rel="stylesheet" href="">
-    <title>{% block title %}Mon site de cryptanalyse{% endblock title %}</title>
-</head>
-<body>
-
-<header>Le site de cryptanalyse</header>
-    <nav>
-        {% block nav %}
-        <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/contact">Nous Contacter</a></li>
-        </ul>
-        {% endblock nav %}
-    </nav>
-    <section id="content">
-        {% block content %}{% endblock content %}
-    </section>
-
-<footer>© Les cryptanaliste de CP</footer>
-
-</body>
-<footer>
-
-</footer>
-</html>
+{% extends "base.html" %}
