--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+       rel="stylesheet"
+       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+       crossorigin="anonymous"
+    />
+    <link
+       rel="stylesheet"
+       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+       crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
     <title>{% block title %}Mon site de cryptanalyse{% endblock title %}</title>
 </head>
 <body>
 
-<header>Le site de cryptanalyse</header>
-    <nav>
-        {% block nav %}
-        <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/contact">Nous Contacter</a></li>
-        </ul>
-        {% endblock nav %}
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="navbar ">
+            <div class="navbar-nav" id="navbar">
+                {% block nav %}
+                <a class="nav-item nav-link" id="home" href="">Accueil</a>
+                <a class="nav-item nav-link" id="blog" href="{% url "blog.views.accueil" %}">Blog</a>
+                <a class="nav-item nav-link" id="contact" href="{% url "blog.views.contact" %}">Nous Contacter</a>
+                {% if user.is_authenticated %}
+                <a class="nav-item nav-link nav-right" id="profile" href="{% url "private_profile" %}">{{request.user.username}}</a>
+                <a class="nav-item nav-link nav-right" id="disconnect" href="{% url "deconnexion" %}">Se déconnecter</a>
+                {% else %}
+                <a class="nav-item nav-link" id="login" href="{% url "connexion" %}">Connexion</a>
+                {% endif %}
+                    
+
+                {% endblock nav %}
+
+            </div>
+        </div>
     </nav>
+</header>
     <section id="content">
         {% block content %}{% endblock content %}
     </section>
