--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %}
 
-
 {% block content %}
+<div id=login-block>
+    <h1>Connexion</h1>
+    
+    {% if error %}
+    <p><strong>Nom d'utilisateur ou mot de passe invalide.</strong></p>
+    {% endif %}
+    {% if user.is_authenticated %}
+    <p>Vous êtes connecté, {{ user.username }}</p>
+    {% else %}
+    <form action="." method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Se connecter">
+    </form>
+    {% endif %}
 
-<h1>Connexion</h1>
-
-{% if error %}
-<p><strong>Nom d'utilisateur ou mot de passe invalide.</strong></p>
-{% endif %}
-{% if user.is_authenticated %}
-<p>Vous êtes connecté, {{ user.username }}</p>
-{% else %}
-<form action="." method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Se connecter">
-</form>
-{% endif %}
+</div>
     
 
 {% endblock content %}
